project and leaders images update, logo, mobile number and whatsapp click to chat implemented on get a quote

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bhadu Infra | Infrastructure & Earthwork Experts | 39+ Years in Western Rajasthan</title>
+    <link rel="icon" type="image/png" href="Bhadu_Infra_LOGO-removebg-preview.png">
     <meta name="description" content="Bhadu Infra is Western Rajasthan's leading infrastructure and earthwork company with 39+ years of excellence. Expert in excavation, road construction, commercial & residential projects." />
     <meta name="author" content="Bhadu Infra" />
     <meta name="keywords" content="infrastructure, earthwork, construction, Jodhpur, Rajasthan, excavation, road construction, heavy machinery, PWD contractor" />
